--- a/think/bibfile.bib
+++ b/think/bibfile.bib
@@ -14,3 +14,18 @@
   year={2010},
   organization={IEEE}
 }
+
+@inproceedings{rippel2015spectral,
+  title={Spectral representations for convolutional neural networks},
+  author={Rippel, Oren and Snoek, Jasper and Adams, Ryan P},
+  booktitle={Advances in Neural Information Processing Systems},
+  pages={2449--2457},
+  year={2015}
+}
+
+@book{hjorungnes2011complex,
+  title={Complex-valued matrix derivatives: with applications in signal processing and communications},
+  author={Hj{\o}rungnes, Are},
+  year={2011},
+  publisher={Cambridge University Press}
+}
