--- a/think/bibfile.bib
+++ b/think/bibfile.bib
@@ -15,7 +15,7 @@
   organization={IEEE}
 }
 
-@inproceedings{rippel2015spectral,
+@inproceedings{SpectralPool,
   title={Spectral representations for convolutional neural networks},
   author={Rippel, Oren and Snoek, Jasper and Adams, Ryan P},
   booktitle={Advances in Neural Information Processing Systems},
@@ -23,7 +23,7 @@
   year={2015}
 }
 
-@book{hjorungnes2011complex,
+@book{Complexderivatives,
   title={Complex-valued matrix derivatives: with applications in signal processing and communications},
   author={Hj{\o}rungnes, Are},
   year={2011},
