--- a/think/DeepDCF.tex
+++ b/think/DeepDCF.tex
@@ -8,7 +8,9 @@
 \usepackage{algorithmic}
 
 \begin{document}
-\title{DeepDCF: The best feature for the DCF based tracker }
+\title{DeepDCF: The best feature for the DCF based tracker \\
+DCFNet: Discriminant Correlation Filter Network on Visual Tracking\\
+Best Convolutional Features for Correlation Filter based Visual Tracking}
 \author{QiangWang}
 \date{\today}
 \maketitle
